--- a/SA.MVC/Views/Home/Login.cshtml
+++ b/SA.MVC/Views/Home/Login.cshtml
@@ -36,12 +36,7 @@
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SecurityCode" class="control-label"></label>
-                        <input asp-for="SecurityCode" class="form-control" />
-                        <span asp-validation-for="SecurityCode" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <input type="submit" value="Login" class="btn btn-primary" />
                     </div>
                 </form>
             </div>
