--- a/SA.MVC/Views/Home/Index.cshtml
+++ b/SA.MVC/Views/Home/Index.cshtml
@@ -12,6 +12,93 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dobrodošli</h1>
+    <p>Molimo vas odaberite željene mentore</a>.</p>
 </div>
+
+<div class="container">
+    <div class="row h-100 justify-content-center align-items-center text-center">
+        <table>
+            <tr>
+                <td>
+                    <h1>Profesori</h1>
+                </td>
+                <td>
+                    <h1>Odabir</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div id="dvleft">
+                        <ul id="lstproducts">
+                        </ul>
+                    </div>
+                </td>
+                <td>
+                    <div id="dvright">
+                        <ul id="lstselectedproducts"></ul>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="row mt-5 justify-content-center align-items-center text-center">
+        <button type="button" class="btn btn-primary text-center w-50">Spremi odabir</button>
+    </div>
+</div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            loadProducts();
+
+            //Function to set events for Drag-Drop
+            function setEvents() {
+                var lstProducts = $('li');
+                //Set Drag on Each 'li' in the list
+                $.each(lstProducts, function (idx, val) {
+                    $('li').on('dragstart', function (evt) {
+                        evt.originalEvent.dataTransfer.setData("Text", evt.target.textContent);
+                        evt.target.draggable = false;
+                    });
+                });
+
+                //Set the Drop on the <div>
+                $("#dvright").on('drop', function (evt) {
+                    evt.preventDefault();
+                    var data = evt.originalEvent.dataTransfer.getData("Text");
+                    var lst = $("#lstselectedproducts");
+                    var li = "<li>" + data + "</li>";
+                    li.textContent = data;
+                    lst.append(li);
+                });
+
+                //The dragover
+                $("#dvright").on('dragover', function (evt) {
+                    evt.preventDefault();
+                });
+            }
+
+            ///Function to load products using call to WEB API
+            function loadProducts() {
+                var items = "";
+                $.ajax({
+                    url: '@Url.Action("GetProfessorsByCourse", "Users", new { id = @Model.Id})',
+                    type: "GET",
+                    success: function (resp) {
+                        console.log(resp);
+                        $.each(resp, function (idx, val) {
+                            items += "<li draggable='true'>" + val.firstName + ' ' + val.lastName + "</li>";
+                        });
+                        $("#lstproducts").html(items);
+                        setEvents();
+                    },
+                    error: function (err) {
+                        alert("Error! " + err.status);
+                    }
+                });
+            };
+        });
+    </script>
+}
