--- a/SA.MVC/wwwroot/css/site.css
+++ b/SA.MVC/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -68,4 +70,16 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+/*krisitjan CSS*/
+table, td {
+    background-color: azure;
+    border: double;
+}
+
+#dvright, #dvleft {
+    background-color: azure;
+    height: 300px;
+    width: 400px;
 }
