--- a/SA.MVC/wwwroot/css/site.css
+++ b/SA.MVC/wwwroot/css/site.css
@@ -56,13 +56,12 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
   min-height: 100%;
 }
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  height:100vh;
 }
 .footer {
   position: absolute;
