--- a/SA.MVC/Views/Shared/_Layout.cshtml
+++ b/SA.MVC/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container h-75">
+        <main role="main" class="pb-3 h-100">
             @RenderBody()
         </main>
     </div>
